@@ -1,5 +1,5 @@
 #!/bin/bash
- 
+
 # ispCP ω (OMEGA) a Virtual Hosting Control Panel
 # Copyright (C) 2006-2009 by isp Control Panel - http://ispcp.net
 #
@@ -30,7 +30,11 @@ echo "run from folder /var/www/ispcp/engine/setup"
 
 # ispcp.conf
 echo "Checking if ispcp.conf is ok"
-cnf_check=$(php -r "include('../../gui/include/ispcp-config.php');")
+cnf_check=$(php -r "
+                        include('../../gui/include/class.Config.php');
+                        include('../../gui/include/ispcp-config.php');"
+)
+
 if [ "$cnf_check" != "" ]; then
  echo "An error has occurred while reading /etc/ispcp/ispcp.conf, here comes the HTML code:"
  echo $cnf_check
